02-kustomize/overlays/secret/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: hello
          image: registry.gitlab.com/gitops-heros/sith:1.3
          volumeMounts:
          - name: secret-volume
            mountPath: "/etc/sith/"
            readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: james-secret
